# cardano-ledger

./: cabal.project  hie.yaml  shell.nix
alonzo/formal-spec/: alonzo-changes.tex  chain.tex  default.nix  frontmatter.tex  properties.tex  utxo.tex
alonzo/impl/: cardano-ledger-alonzo.cabal
alonzo/impl/src/Cardano/Ledger/: Alonzo.hs
alonzo/impl/src/Cardano/Ledger/Alonzo/: Data.hs  PParams.hs  PlutusScriptApi.hs  Scripts.hs  Translation.hs  Tx.hs  TxBody.hs  TxInfo.hs  TxWitness.hs
cardano-ledger-test/src/Test/Cardano/Ledger/Examples/: TwoPhaseValidation.hs
doc/: default.nix
doc/explanations/: faq.rst  features.rst  glossary.rst  policies.rst
eras/alonzo/formal-spec/: utxo.tex
eras/alonzo/impl/: cardano-ledger-alonzo.cabal
eras/alonzo/impl/src/Cardano/Ledger/: Alonzo.hs
eras/babbage/formal-spec/collateral/: collateral-spec-changes.tex  transactions.tex  utxo.tex
eras/shelley-ma/impl/src/Cardano/Ledger/: ShelleyMA.hs
eras/shelley/impl/: cardano-ledger-shelley.cabal
eras/shelley/impl/src/Cardano/Ledger/: Pretty.hs  Shelley.hs
eras/shelley/test-suite/: cardano-ledger-shelley-test.cabal
example-shelley/src/Cardano/Ledger/: Example.hs
goguen/formal-spec/: goguen-changes.tex  notation.tex
libs/cardano-ledger-core/: cardano-ledger-core.cabal
libs/cardano-ledger-core/src/Cardano/Ledger/: Address.hs  AuxiliaryData.hs  Block.hs  Coin.hs  CompactAddress.hs  Core.hs  Era.hs  SafeHash.hs  TxIn.hs  Val.hs
libs/cardano-ledger-test/: cardano-ledger-test.cabal
libs/small-steps/: small-steps.cabal
libs/small-steps/src/Data/: ReverseIxMap.hs
nix/: default.nix  haskell.nix  pkgs.nix
phase1-2/: alonzo-changes.tex  utxo.tex
pivo/: cardano-ledger-pivo.cabal
pivo/src/Cardano/Ledger/: Pivo.hs
pivo/src/Cardano/Ledger/Pivo/: Rules.hs  TxBody.hs  Update.hs
pivo/src/Cardano/Ledger/Pivo/Rules/: Common.hs  Pup.hs  Tick.hs  Upec.hs  Utick.hs  Utxo.hs  Utxow.hs
pivo/src/Cardano/Ledger/Pivo/Update/: Proposal.hs
pivo/src/Cardano/Ledger/Pivo/Update/Classes/: HasWitnesses.hs
pivo/src/Cardano/Ledger/Pivo/Update/Payload/: Implementation.hs  SIP.hs  SIP2.hs  Types.hs
pivo/src/Cardano/Ledger/Pivo/Update/Payload/SIP/: Proposal.hs  Revelation.hs  Submission.hs  Vote.hs
pivo/test/: Main.hs
pivo/test/Cardano/Ledger/Pivo/Update/: Serialisation.hs
semantics/executable-spec/: small-steps.cabal
semantics/executable-spec/src/Control/Iterate/: SetAlgebraInternal.hs
semantics/executable-spec/src/Control/State/Transition/: Extended.hs
semantics/executable-spec/src/Data/: AbstractSize.hs  CodersInline.hs
shelley-ma/executable-impl/: CHANGELOG.md  executable-impl.cabal
shelley-ma/formal-spec/: utxo.tex
shelley-ma/impl/src/Cardano/Ledger/: Allegra.hs  Mary.hs
shelley-ma/impl/src/Cardano/Ledger/Mary/: Value.hs
shelley-mc/formal-spec/: chain.tex
shelley/chain-and-ledger/dependencies/non-integer/reference/: non_integral.c  non_integral.h  non_integral_test.cpp
shelley/chain-and-ledger/executable-spec/: shelley-spec-ledger.cabal
shelley/chain-and-ledger/executable-spec/bench/: UpdateChainBench.hs
shelley/chain-and-ledger/executable-spec/test/: shelley-spec-ledger-test.cabal
shelley/chain-and-ledger/shelley-spec-ledger-test/: err.txt  shelley-spec-ledger-test.cabal  tests.txt
shelley/chain-and-ledger/shelley-spec-ledger-test/bench/: BenchUTxOAggregate.hs  Main.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/src/Test/: Screenplay.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/test/: Tests.hs
shelley/multisig/: NativeMultiSig.hs
(+214 files in other folders)
